Add exports on JDK 9+